Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/CsScript._ManageWS.cs
function nAsm

#if !EXE

int+ ___CsScript_nAsm
if(nAsm=___CsScript_nAsm) ret
___CsScript_nAsm=nAsm
 out nAsm
if(nAsm%100) ret
out nAsm

PROCESS_MEMORY_COUNTERS pm.cb=sizeof(pm)
if(GetProcessMemoryInfo(GetCurrentProcess &pm pm.cb))
	out pm.WorkingSetSize/1024/1024
	if(pm.WorkingSetSize/1024/1024>30) SetProcessWorkingSetSize GetCurrentProcess -1 -1
